posiGen_FullsendBox/src/objects/EU_Item_Type_Savings_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>Distribution_01_Jan_Pct__c</fullName>
        <description>January&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>January&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 01 Jan Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_02_Feb_Pct__c</fullName>
        <description>February&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>February&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 02 Feb Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_03_Mar_Pct__c</fullName>
        <description>March&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>March&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 03 Mar Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_04_Apr_Pct__c</fullName>
        <description>April&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>April&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 04 Apr Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_05_May_Pct__c</fullName>
        <description>May&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>May&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 05 May Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_06_Jun_Pct__c</fullName>
        <description>June&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>June&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 06 Jun Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_07_Jul_Pct__c</fullName>
        <description>July&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>July&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 07 Jul Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_08_Aug_Pct__c</fullName>
        <description>August&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>August&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 08 Aug Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_09_Sep_Pct__c</fullName>
        <description>September&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>September&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 09 Sep Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_10_Oct_Pct__c</fullName>
        <description>October&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>October&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 10 Oct Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_11_Nov_Pct__c</fullName>
        <description>November&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>November&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 11 Nov Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_12_Dec_Pct__c</fullName>
        <description>December&apos;s percentage of the projected annual kWh savings for one UoM of this item</description>
        <inlineHelpText>December&apos;s percentage of the projected annual kWh savings for one UoM of this item</inlineHelpText>
        <label>Distribution 12 Dec Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EE_Upgrade_Item_Type__c</fullName>
        <label>EE Upgrade Item Type</label>
        <referenceTo>EE_Upgrade_Item_Type__c</referenceTo>
        <relationshipLabel>EU Item Type Savings Distributions</relationshipLabel>
        <relationshipName>EU_Item_Type_Savings_Distributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location for savings estimation for the current EE Upgrade Item Type. Granularity (state vs. county level) TBD.</description>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>EU Item Type Savings Distribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EE_Upgrade_Item_Type__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EU Item Type Savings Distribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EU Item Type Savings Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>